[project]
name = "metricon-summary-and-sentiment-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub==0.17.3",
    "ipykernel>=7.1.0",
    "langgraph==0.0.40",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "sentence-transformers==2.2.2",
    "sentencepiece>=0.2.1",
    "streamlit==1.30.0",
    "transformers==4.33.3",
]
